--- a/reveal/index.html
+++ b/reveal/index.html
@@ -54,8 +54,50 @@
             </p>
             </section>
             <section>
-            <p><image src="車架2.jpg" width="482" hight="612">
-            <img alt="" height="598" src="車架3.jpg" width="816"></p>
+            <p><image src="車架2.jpg" width="482" hight="612"></p>
+            <section>
+            <section>
+            <h3>前叉衝擊測試</h3>
+            <p>參考規範
+
+            ISO 4210
+            第六章
+            5.4 前叉-後叉衝擊測試
+
+            在測試治具上安裝重1公斤滾輪，如下圖，將重22.5公斤的落槌至於滾輪上，將落錘升起治距離"h"，釋放落錘使其錘職下落
+            </p>
+            </section>
+            <section>
+            <p><image src="前叉.jpg" width="558" hight="656"></p>
+            <section>
+            <section>
+            <h3>踏板衝擊測試</h3>
+            <p>參考規範
+
+            ISO 4210
+            第八章
+            4.2 踏板－衝擊測試
+
+            將腳踏板穩固鎖緊於堅硬平面治具上，與軸心呈水平，如圖 3 所示，製作圖 2 示意的落錘，重 15 公斤，從高 400 mm 處以衝擊腳踏板中心。 備註見 TBIS 4210‐3:2016 附錄 B。
+            </p>
+            </section>
+            <section>
+            <p><image src="踏板.jpg" width="365" hight="589"></p>
+            <section>
+            <section>
+            <h3>登山車輪組能量吸收測試</h3>
+            <p>參考規範
+
+            ISO 4210
+            第七章 附錄C
+
+            依輪軸之緊固裝置支撐倫組，兵將受衝擊處語氣嘴呈90度相對位置後，以40J進行衝擊，衝擊之錐鉆須為鐵機金屬，總質量為22.5KG，落下期間允許被引導，重吉時須達到自由落體95%含以上的落下速度
+
+            錐鉆幾何規格如下，其長度需大於輪胎寬度
+            </p>
+            </section>
+            <section>
+            <p><image src="輪胎.jpg" width="732" hight="570"></p>
             <section>
         </section>
 
@@ -66,7 +108,6 @@
         <p> 第七、八周:修改並測試</p>
         <p> 第九周:報告</p>
         </section>
-
     </div>
 </div>
     <script src="dist/reveal.js"></script>
