--- a/reveal/index.html
+++ b/reveal/index.html
@@ -141,6 +141,26 @@
             <p><image src="成品4.jpg" width="330" hight="444"></p>
             </section>
         </section>
+        <section>
+        <h4>零件圖</h4>
+        <p><image src="工程圖.png" width="330" hight="444"></p>
+        </section>
+        <section>
+        <h4>BOM圖</h4>
+        <p><image src="BOM表.png" width="330" hight="444"></p>
+        </section>
+        <section>
+        <p><image src="工程圖1.jpg" width="330" hight="444"></p>
+        </section>
+        <section>
+        <p><image src="工程圖2.jpg" width="330" hight="444"></p>
+        </section>
+        <section>
+        <p><image src="工程圖3.jpg" width="330" hight="444"></p>
+        </section>
+        <section>
+        <p><image src="工程圖4.jpg" width="330" hight="444"></p>
+        </section>
     </div>
 </div>
     <script src="dist/reveal.js"></script>
