--- a/reveal/index.html
+++ b/reveal/index.html
@@ -164,6 +164,25 @@
             <p><image src="工程圖4.jpg" width="800" hight="800"></p>
             </section>
         </section>
+        <!-- Example of nested vertical slides -->
+        <section>
+            <section>
+            <h4>整體爆炸圖</h4>
+            <p><image src="本體爆炸圖.png" width="800" hight="800"></p>
+            </section>
+            <section>
+            <h4>傳動系統爆炸</h4>
+            <p><image src="上部爆炸.png" width="800" hight="800"></p>
+            </section>
+            <section>
+            <h4>聯板爆炸圖</h4>
+            <p><image src="聯板爆炸.png" width="800" hight="800"></p>
+            </section>
+            <section>
+            <h4>衝擊頭爆炸圖</h4>
+            <p><image src="衝擊頭爆炸.png" width="800" hight="800"></p>
+            </section>
+        </section>
     </div>
 </div>
     <script src="dist/reveal.js"></script>
