--- a/config/content.htm
+++ b/config/content.htm
@@ -110,4 +110,7 @@
 <h2>第二次討論</h2>
 <p>日期4/6</p>
 <p><img alt="" height="1100" src="/images/第二次4人分組討論.jpg" width="443"/></p>
+<h2>第三次討論</h2>
+<p>日期4/17</p>
+<p><img alt="" height="1136" src="/images/第三次討論1.jpg" width="1228"/><img alt="" height="1106" src="/images/第三次討論2.jpg" width="636"/><img alt="" height="1113" src="/images/第三次討論3.jpg" width="715"/><img alt="" height="1145" src="/images/第三次討論4.jpg" width="795"/></p>
 <p></p>
